# ecolab

./: CMakeLists.txt  dependencies.cmake  generate_nauty_sizes.cmake  nauty_sizes.h.in
classdesc/: CMakeLists.txt  classdesc.cmake
graphcode/: CMakeLists.txt
models/: CMakeLists.txt
src/: CMakeLists.txt
